[Ref] Simplify security code, remove custom AuthenticationToken class in favor of reusing Spring types.